clusters/sirius/apps/yts-downloader/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yts-downloader
spec:
  selector:
    app: yts-downloader
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
      name: http
  type: ClusterIP
