clusters/sirius/apps/yts-downloader/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: yts-downloader
    app.kubernetes.io/name: yts-downloader
  annotations:
   cert-manager.io/cluster-issuer: default-clusterissuer
  name: yts-ingress
spec:
  tls:
  - hosts:
    - ytssearch.sirius.moonblade.work
    secretName: yts-cert
  rules:
  - host: ytssearch.sirius.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yts-downloader
            port:
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: yts-outer
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ""
  labels:
    external-dns-exclude: "true"
spec:
  rules:
  - host: ytssearch.moonblade.work
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: yts-downloader
            port:
              name: http
